--- a/Number Theory 1.tex
+++ b/Number Theory 1.tex
@@ -59,4 +59,105 @@ $a|b$
     \item (n,1)=\hspace{80px}[n,1]=
 \end{itemize}
 
+\subsubsection{Theorem}
+
+If $(a,b)=d$, then $(a/d,b/d)=1$\\
+Proof:
+\vspace{40px}
+
+\subsubsection{Theorem}
+
+If $a=bq+r$, then $(a,b)=(b,r)$\\
+Proof:
+\vspace{40px}
+
+\subsubsection{Euclidean Algorithm}
+\pagebreak
+
+\subsubsection{Theorem}
+If$(a,b)=d$, then exist integers $x, y$ such that
+$$ax+by=d$$
+Proof:
+\vspace{60px}
+
+\subsubsection{Corollary}
+If $d|ab$ and $(d,a)=1$, then $d|b$\\
+Proof:
+\vspace{40px}
+
+\subsection{Primes and UFD}
+\subsubsection{Primes}
+Definition:
+\vspace{20px}
+\subsubsection{Lemma}
+If $n$ is composite, the there is a divider $d$ such that $d \le n^{\frac{1}{2}}$\\
+Proof:
+\vspace{20px}
+\subsubsection{Lemma}
+If $n$ is composite, the there is a prime divider $p$ such that $p \le n^{\frac{1}{2}}$
+\subsubsection{Euclid's Lemma}
+If $p$ is a prime and $p|ab$ then $p|a$ or $p|b$.\\
+Proof:
+
+\pagebreak
+\subsubsection{Extended Euclid's Lemma 1}
+If $p$ is a prime and $p|a_1 a_2 ... a_n $ then $p|a_i$.
+
+\subsubsection{Extended Euclid's Lemma 2}
+If $p$ and $q_i$ are primes and $p|q_1 q_2 ... q_n $ then $p=q_i$.
+
+\subsubsection{$\mathbb{Z}$ is UFD (Unique Factorization Domain)}
+Any positive integer can be written as a product of primes in one and only one way.\\
+Proof:
+\vspace{50px}
+
+\subsubsection{GCD and LCM in Terms of Factorization}
+\vspace{50px}
+
+\subsubsection{Theorem $(a,b)[a,b]=ab$}
+
+\vspace{50px}
+\section{Diophantine Equations}
+\subsection{Definition}
+\vspace{20px}
+\subsection{Use Divisibility}
+\subsubsection{Example}
+Given $x,y$ are integers and $xy=30$, find ordered pair $(x,y)$.
+\pagebreak
+\subsubsection{Example}
+Given $x,y$ are integers and
+$$y=\frac{x^3 + 7 x - 10}{x+3},$$
+find ordered pair $(x,y)$.
+
+\vspace{60px}
+
+\subsubsection{Simon's Favourite Factoring Trick}
+Given $x,y$ are integers and
+$$3x+xy+3y+31=0,$$
+find ordered pair $(x,y)$.
+\vspace{60px}
+
+\subsection{Solve Linear Diophantine Equations}
+\subsubsection{Definition}
+
+Solve $ax+by=c$ for integers $x,y$.
+
+\subsubsection{Theorem}
+
+For the equation above, if $(a,b)|c$, then there are infinite number of solutions. If $(a,b) \nmid c$, then there is no solution.
+
+\subsubsection{Example}
+Solve $3x+4y=10$.
+\vspace{50px}
+
+\subsubsection{Example}
+Solve $8x+4y=6$.
+
+
+\subsubsection{Example}
+Solve $6x+9y=24$.
+\vspace{50px}
+
+\section{Congruences and Modulo}
+
 \end{document}
