--- a/Number Theory 1.tex
+++ b/Number Theory 1.tex
@@ -114,9 +114,15 @@ Proof:
 \subsubsection{GCD and LCM in Terms of Factorization}
 \vspace{50px}
 
-\subsubsection{Theorem $(a,b)[a,b]=ab$}
+\subsubsection{Theorem}
+$(a,b)[a,b]=ab$
+\vspace{50px}
+\subsubsection{Theorem}
+Number of divisor $d(n)=$
+
 
 \vspace{50px}
+
 \section{Diophantine Equations}
 \subsection{Definition}
 \vspace{20px}
@@ -159,5 +165,28 @@ Solve $6x+9y=24$.
 \vspace{50px}
 
 \section{Congruences and Modulo}
+\subsection{Definition}
+If $a$ is congruent to $b$ modulo $m$ ($a \equiv b$ $(m)$) or ($a \equiv b$ (mod $m$)), then $m|a-b$.
+
+\subsection{Congruences and Remainder}
+\subsubsection{Theorem}
+Every integer is congruent ($m$) to exactly one of $0, 1, ... , m-1$.
+\vspace{40px}
+
+\subsubsection{Theorem}
+$a \equiv b$ ($m$) iff $a$ and $b$ leave the same remainder on division by $m$.
+\vspace{40px}
+
+\subsection{Operations under modulo}
+\subsubsection{Lemma}
+\begin{itemize}
+    \item $a \equiv a \ (m)$.
+    \item If $a \equiv b \ (m)$, then $b \equiv a \ (m)$.
+    \item If $a \equiv b \ (m)$ and $c \equiv d \ (m)$, then $a+b \equiv c+d \ (m)$.
+    \item If $a \equiv b \ (m)$ and $c \equiv d \ (m)$, then $ab \equiv cd \ (m)$.
+\end{itemize}
+\section{Linear Congruences}
+
+
 
 \end{document}
