--- a/Number Theory 1.tex
+++ b/Number Theory 1.tex
@@ -188,10 +188,10 @@ $a \equiv b$ ($m$) iff $a$ and $b$ leave the same remainder on division by $m$.
 \vspace{60px}
 \subsubsection{Theorem}
 If $ac \equiv bc \ (m)$ and $(c,m)=1$, then $a \equiv b \ (m)$
-\vspace{50px}
+\vspace{40px}
 \subsubsection{Theorem}
 If $ac \equiv bc \ (m)$ and $(c,m)=d$, then $a \equiv b \ (m/d)$
-\vspace{50px}
+\vspace{40px}
 \subsection{Problems}
 \subsubsection{Problem}
 Find the least residue of 1492 (mod 4), (mod 10), (mod 101).
@@ -201,6 +201,9 @@ Solve $2x \equiv 4 \ (6)$.
 \vspace{40px}
 \subsubsection{Problem}
 Prove $m^2 \equiv \text{ 0 or 1 } (4)$
+\vspace{40px}
+\subsubsection{Problem}
+Solve $m^2+n^2=1023$
 \vspace{40px}
 \subsubsection{Problem}
 Show every integer is congruent to (mod 9) to the sum of its digits.
