--- a/Number Theory 1.tex
+++ b/Number Theory 1.tex
@@ -263,7 +263,7 @@ $$a^{p-1} \equiv 1 \pmod{p}$$
 What is the least residue of $1945^8 \pmod{7}$
 \vspace{30px}
 \subsubsection{Example}
-What is the least residue of $2025^22 \pmod{11}$
+What is the least residue of $2025^{22} \pmod{11}$
 \vspace{30px}
 
 
