--- a/Number Theory 1.tex
+++ b/Number Theory 1.tex
@@ -219,7 +219,7 @@ If $(a, m) \nmid b$, then $ax \equiv b \ (m)$ has no solutions.
 If $(a, m) \nmid 1$, then $ax \equiv b \ (m)$ has exactly one solution mod $m$.
 \vspace{50px}
 \subsubsection{Theorem}
-If $(a, m) \nmid d$, then $ax \equiv b \ (m)$ has exactly one solution mod $m/d$.
+If $(a, m) = d$ and $d|b$, then $ax \equiv b \ (m)$ has exactly one solution mod $m/d$.
 \vspace{50px}
 \subsection{Problems}
 \subsubsection{Problem}
