--- a/Number Theory 1.tex
+++ b/Number Theory 1.tex
@@ -216,7 +216,7 @@ We will try to solve the linear equation $ax \equiv b \pmod{m}$ in this section.
 If $(a, m) \nmid b$, then $ax \equiv b \ (m)$ has no solutions.
 \vspace{50px}
 \subsubsection{Theorem}
-If $(a, m) \nmid 1$, then $ax \equiv b \ (m)$ has exactly one solution mod $m$.
+If $(a, m) = 1$, then $ax \equiv b \ (m)$ has exactly one solution mod $m$.
 \vspace{50px}
 \subsubsection{Theorem}
 If $(a, m) = d$ and $d|b$, then $ax \equiv b \ (m)$ has exactly one solution mod $m/d$.
